October 2012 - Dansguardian 2.12.0.4 - beta 
- Applied patch #1 (subdomain block of greylist domains/sites) by Frederic Bourgeois

September 2012 - Dansguardian 2.12.0.3 - alpha
- Fixed memory leaks reported by analysis from coverity
- Improved persistent connection for a better RFC compliant implementation, but not yet fully HTTP 1.1
- Minor improvement for debug output
- Applied patch #11 (Maxuploadsize per filtergroup) by Frederic Bourgeois

September 2012 - Dansguardian 2.12.0.2 - alpha
- Applied patch #9 (Crash when more than one authplugin are selected) by Frederic Bourgeois
- Added feature to allow Facebook mock ajax (request #6) by Jason Spiro
- Added contrib dir
- Added a new html & css validated html template in contrib (request #3). By Chris Peschke
- Converted iso-8859 message files to utf-8 (bug #86). Suggested by Fred Ulisses Maranhao
- Fixed Error reading Content-Length (bug #84). By Carlos Soto
- Fixed compilation error BSD due lack of string.h when using memcpy() (bug #75). By Alexander Hornung
- Fixed exceptioniplist case sensitivity (bug #11). By Mark J Hewitt
- Fixed accept-encoding support for new tokens (bug #13). By userquin

May 2012 - Dansguardian 2.12.0.1 - alpha - UNRELEASED
- Applied patch 3438750 (GCC 4.4 and 4.6 compatibility) by Mathieu PARENT
- Applied patch 3438749 (French translation update) by Mathieu PARENT
- Applied patch 3418297 (Set proxy timeout in dansguardian.conf) by Frederic Bourgeois
- Applied patch 3419088 (login/password in URL is dropped) by Mathieu PARENT
- Applied patch 3419089 ("Expect" header should be dropped) by Mathieu PARENT
- Applied patch 3438751 (Fix queue handling in OptionContainer) by Mathieu PARENT
- Applied patch 3515167 (Fix digest identication) by Frederic Bourgeois
- Fixed GCC warnings
- LFS review in String.cpp (requires different arch review yet)

August 2011 - DansGuardian 2.12.0.0 - alpha

- Search term filtering
- POST data scanning
- ClamAV scanner removed (direct library usage, not ClamD)