@@ -229,7 +229,7 @@ void BaseSocket::checkForInput(int timeout, bool honour_reloadconfig) throw(std:
 	t.tv_usec = 0;
 	if (selectEINTR(sck + 1, &fdSet, NULL, NULL, &t, honour_reloadconfig) < 1) {
 		std::string err("select() on input: ");
-		throw std::runtime_error(err + (errno ? strerror(errno) : "timeout"));
+		throw std::runtime_error(err + (errno ? ErrStr() : "timeout"));
 	}
 }
 
@@ -261,7 +261,7 @@ void BaseSocket::readyForOutput(int timeout, bool honour_reloadconfig) throw(std
 	t.tv_usec = 0;
 	if (selectEINTR(sck + 1, NULL, &fdSet, NULL, &t, honour_reloadconfig) < 1) {
 		std::string err("select() on output: ");
-		throw std::runtime_error(err + (errno ? strerror(errno) : "timeout"));
+		throw std::runtime_error(err + (errno ? ErrStr() : "timeout"));
 	}
 }
 
@@ -316,7 +316,7 @@ int BaseSocket::getLine(char *buff, int size, int timeout, bool honour_reloadcon
 			if (errno == EINTR && (honour_reloadconfig ? !reloadconfig : true)) {
 				continue;
 			}
-			throw std::runtime_error(std::string("Can't read from socket: ") + strerror(errno));  // on error
+			throw std::runtime_error(std::string("Can't read from socket: ") + ErrStr());  // on error
 		}
 		//if socket closed...
 		if (bufflen == 0) {
@@ -351,7 +351,7 @@ void BaseSocket::writeString(const char *line) throw(std::exception)
 {
 	int l = strlen(line);
 	if (!writeToSocket(line, l, 0, timeout)) {
-		throw std::runtime_error(std::string("Can't write to socket: ") + strerror(errno));
+		throw std::runtime_error(std::string("Can't write to socket: ") + ErrStr());
 	}
 }
 
@@ -359,7 +359,7 @@ void BaseSocket::writeString(const char *line) throw(std::exception)
 void BaseSocket::writeToSockete(const char *buff, int len, unsigned int flags, int timeout, bool honour_reloadconfig) throw(std::exception)
 {
 	if (!writeToSocket(buff, len, flags, timeout, honour_reloadconfig)) {
-		throw std::runtime_error(std::string("Can't write to socket: ") + strerror(errno));
+		throw std::runtime_error(std::string("Can't write to socket: ") + ErrStr());
 	}
 }
 
