@@ -1,0 +1,16 @@
+// For all support, instructions and copyright go to:
+// http://dansguardian.org/
+// Released under the GPL v2, with the OpenSSL exception described in the README file.
+
+#ifndef __HPP_DEBUG
+#define __HPP_DEBUG
+
+// INCLUDES
+#include <string.h>
+#include <string>
+#include <cerrno>
+
+// DEFINES
+std::string ErrStr();
+
+#endif
